--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Hello world</h1>
-    <script src="./../dist/bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
