--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,16 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <h1 class="hello">Hello world</h1>
+    <div class="container">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+        <div class="item">5</div>
+    </div>
+    <p class="message-error">error</p>
+    <p class="message-info">info</p>
     <script src="bundle.js"></script>
 </body>
 </html>
