--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-
+    <link rel="stylesheet" href="style.css">
+    <script src="bundle.js"></script>
 </head>
 <body>
     <h1>Hello world</h1>
@@ -19,6 +20,5 @@
     </div>
     <p class="message-error">error</p>
     <p class="message-info">info</p>
-    <script src="bundle.js"></script>
 </body>
 </html>
